--- a/Gaming/horaire.html
+++ b/Gaming/horaire.html
@@ -38,6 +38,6 @@
             <td class="di"><a href="jeux.html#deux" class="x"></a></td>
         </tr>
     </table>
-    <a href="Homepage.html"><img src="image/fleche-pointant-vers-la-gauche_318-40288.avif"
+    <a href="index.html"><img src="image/fleche-pointant-vers-la-gauche_318-40288.avif"
         width="100px" id="arrow"></a>
 </body>
