--- a/Gaming/jeux.html
+++ b/Gaming/jeux.html
@@ -29,6 +29,6 @@
         width="400px" class="do"></a></td>
     </tr>
 </table>
-<a href="Homepage.html"><img src="image/fleche-pointant-vers-la-gauche_318-40288.avif"
+<a href="index.html"><img src="image/fleche-pointant-vers-la-gauche_318-40288.avif"
     width="100px" id="arrow"></a>
 </body>
